[project]
name = "package-b"
version = "0.1.0"
description = "The package B"
readme = "README.md"
authors = [
    { name = "pausz"}
]
requires-python = ">=3.12"
dependencies = ["package_a"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"


[tool.uv.sources]
package-a = {git = "ssh://git@github.com/pausz/package_a.git", branch = "main"}
