[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[project]
name = "package-b"
version = "0.5.0"
description = "The package B"
readme = "README.md"
authors = [
    { name = "pausz"}
]
requires-python = ">=3.12"

[project.optional-dependencies]
models = [
    "package_a~=2.0",
]

# Adding a source that references to an older major version of package_a
[tool.uv.sources]
package-a = {git = "ssh://git@github.com/pausz/package_a.git", branch = "uv-test/version-1"}

# Build configuration - hatchling
[tool.hatch.version]
path = "src/package_b/__init__.py"